Change on charts, Addinng tpl files for both charts + edit deployments

--- a/clients/harbor-client/charts/templates/deployment.yaml
+++ b/clients/harbor-client/charts/templates/deployment.yaml
@@ -11,19 +11,23 @@ spec:
       {{- include "snappcloud-harbor-client.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      labels:
-        {{- include "snappcloud-harbor-client.selectorLabels" . | nindent 8 }}
+      {{- with .Values.podAnnotations }}
       annotations:
-        {{- .Values.podAnnotations | toYaml | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      labels:
+        {{- include "snappcloud-harbor-client.labels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
-      serviceAccountName: {{ include "snappcloud-harbor-client.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
@@ -35,12 +39,5 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.configSecretName }}
                   key: IMAGE_REFERENCE
-          {{ .Values.nodeSelector | toYaml | nindent 8 }}
-      tolerations:
-        {{- with .Values.tolerations }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
-      affinity:
-        {{- with .Values.affinity }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
