--- a/clients/proxy-client/charts/values.yaml
+++ b/clients/proxy-client/charts/values.yaml
@@ -5,12 +5,12 @@ image:
   pullPolicy: Always
   tag: "0.1.0"
 
-imagePullSecrets: []
+imagePullSecrets: [ ]
 nameOverride: ""
 fullnameOverride: ""
 
-podAnnotations: {}
-podLabels: {}
+podAnnotations: { }
+podLabels: { }
 
 service:
   type: ClusterIP
@@ -30,4 +30,6 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
-configSecretName: spcld-proxy-health-client
+configMapName: spcld-proxy-health-client
+
+proxyUrl: proxy.url
