--- a/clients/harbor-client/charts/templates/service.yaml
+++ b/clients/harbor-client/charts/templates/service.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: http
+      port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
   selector:
