add namespaceSelector to service monitor

--- a/clients/harbor-client/charts/templates/servicemonitor.yaml
+++ b/clients/harbor-client/charts/templates/servicemonitor.yaml
@@ -9,6 +9,9 @@ spec:
   - port: http
     interval: 30s
     path: /metrics
+  namespaceSelector:
+    matchNames:
+      - {{ .Release.Namespace }}
   selector:
     matchLabels:
       {{- include "snappcloud-harbor-client.selectorLabels" . | nindent 6 }}
