--- a/deployment/charts/snappgroup-teh-1.yaml
+++ b/deployment/charts/snappgroup-teh-1.yaml
@@ -33,7 +33,7 @@ configs:
       - order: 6
         name: "Monitoring"
         queries:
-          disruption: 'sum(rate(container_cpu_usage_seconds_total{job="kubelet", namespace=~".*-monitoring"}[5m])) > 50 or sum(rate(container_cpu_usage_seconds_total{job="kubelet", namespace=~".*-monitoring"}[5m])) < 30'
+          disruption: 'sum(rate(container_cpu_usage_seconds_total{job="kubelet", namespace=~".*-monitoring"}[5m])) > 80'
           outage: 'up{job=~"monitoring/default"} == 0'
       - order: 7
         name: "Logging"
@@ -43,7 +43,7 @@ configs:
       - order: 8
         name: "Traffic observability: Hubble"
         queries:
-          disruption: 'sum(rate(hubble_flows_processed_total[2m])) < 100000'
+          disruption: 'sum(rate(hubble_flows_processed_total[2m])) < 10000'
           outage: 'sum (rate(hubble_flows_processed_total[2m])) < 1000'
       - order: 9
         name: "ArgoCD"
