--- a/deployment/charts/templates/route.yaml
+++ b/deployment/charts/templates/route.yaml
@@ -5,7 +5,11 @@ kind: Route
 metadata:
   name: {{ include "snappcloud-status-backend.fullname" $ }}
 spec:
+  {{- if .Values.route.customHost }}
+  host: {{ .Values.route.customHost }}
+  {{- else }}
   host: "status-be.apps.private.{{ .Values.hostname }}"
+  {{- end }}  
   port:
     targetPort: {{ $.Values.service.port }}
   to:
